--- a/rooms.html
+++ b/rooms.html
@@ -25,6 +25,9 @@
     <button id="export-data" class="btn btn-secondary rounded-sm mt-2">
       <i class="fas fa-file-export"></i>
     </button>
+    <button id="clear-data" class="btn btn-danger rounded-sm mt-2">
+      <i class="fas fa-trash"></i>
+    </button>
   </div>
 
   <table id="room-table" class="table mt-4">
